<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FSMK SC</string>
    <string name="signup">Initialize (GCM)</string>
    <string name="initializing">Please wait till we initialize this application…</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_sign_up">Initializing</string>
    <string name="contactingServers">Please wait till we contact our servers.</string>
    <string name="registerFail">Initialization Failed, please try again later.</string>
    <string name="subscribe">Subscribe</string>
    <string name="unsub">Unsubscribe</string>
    <string name="title_activity_subscribe">Subscribe</string>
    <string name="emptyNotifications">No notifications, please wait till you get one! or subscribe people from menu</string>
    <string name="waitSubMsg">Please wait while we get list of users from your college…</string>
    <string name="title_activity_display_notices">Notice</string>
    <string name="confirmOkDeleteButton">Yes, Delete</string>
    <string name="confirmCancelDeleteButton">Cancel</string>
    <string name="deleteNoticeMessage">Are you sure you want to delete this notice?</string>
    <string name="title_activity_unsubscribe">Unsubscribe</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_download">Download</string>
    <string name="volunteers">Volunteers</string>
    <string name="about">About</string>
    <string name="schedule">Schedule</string>
    <string name="title_activity_about">About</string>
    <string name="aboutFSFS">Free Software, Free Society</string>
    <string name="aboutFSFS1">FSMK is a registered not-for-profit organization whose primary objective is to spread and create awareness about free software technologies amongst different sections of the society.</string>
    <string name="aboutFSFS2">FSMK is driven by volunteers from various backgrounds like software professionals, government officials, academicians and students.</string>
    <string name="aboutFSFS3">The Students Chapter of FSMK works actively with college students and encourages them not only to use free software but also contribute to the development of various free software.</string>
    <string name="aboutFSFS4">We facilitate formation of college-wise units called GNU/Linux User\'s Group (GLUG) which conduct various technical sessions regularly throughout the academic session.</string>
    <string name="aboutFSIF">Free Software Free as in Freedom</string>
    <string name="aboutFSIF1">Free software\' means software that respects users\' freedom and community.</string>
    <string name="aboutFSIF2">Roughly, it means that the users have the freedom to run, copy, distribute, study, change and improve the software.</string>
    <string name="aboutFSIF3">Thus, \'free software\' is a matter of liberty, not price.</string>
    <string name="aboutFSIF4">To understand the concept, you should think of \'free\' as in \'free speech,\' not as in \'free beer\' We campaign for these freedoms because everyone deserves them. With these freedoms, the users (both individually and collectively) control the program and what it does for them.</string>
    <string name="aboutFSIF5">When users don\'t control the program, we call it a \'nonfree\' or \'proprietary\' program.</string>
    <string name="aboutFSIF6">The nonfree program controls the users, and the developer controls the program; this makes the program an instrument of unjust power.</string>
    <string name="title_activity_volunteers">Volunteers</string>
    <string name="title_activity_schedule">Schedule</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_contact_us">ContactUs</string>

</resources>
